--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fxe",
+  "name": "@aandrek/fxe",
   "version": "0.0.1",
   "description": "A library to call functions in sync with a beat",
   "main": "fxengine.js",
@@ -19,5 +19,14 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "uglify-js": "^3.15.1"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aandrek/fxe.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aandrek/fxe/issues"
+  },
+  "homepage": "https://github.com/aandrek/fxe#readme"
 }
