--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "webpack-cli": "^4.9.2",
     "uglify-js": "^3.15.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "three": "^0.139.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aandrek/fxe.git"
