--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@aandrek/fxe",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "A library to call functions in sync with a beat",
+  "main": "dist/index.js",
+  "types": "fxengine.d.ts",
   "scripts": {
     "test": "test",
     "build": "webpack --config webpack.prod.js",
