--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@aandrek/fxe",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "description": "A library to call functions in sync with a beat",
-  "main": "dist/index.js",
+  "main": "dist/index.ts",
   "types": "fxengine.d.ts",
   "scripts": {
     "test": "test",
@@ -13,10 +13,12 @@
   "author": "aandrek",
   "license": "ISC",
   "devDependencies": {
-    "three": "^0.149.0",
+    "three": "^0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "uglify-js": "^3.15.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "uglify-js": "^3.15.1"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "three": "^0.139.2"
