--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@aandrek/fxe",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "description": "A library to call functions in sync with a beat",
-  "main": "dist/index.ts",
+  "main": "dist/fxengine.bundle.ts",
   "types": "fxengine.d.ts",
   "scripts": {
     "test": "test",
